Added Procfile for heroku, added signup page

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  div(id="root") #{reactComp}
-  script(src="./index.js")
+  div(id="root") !{reactComp}
+  script(src="/index.js")
